# voml

./: .gitignore  CMakeLists.txt  README.md  details.hpp  example.cpp  example.toml  macro.hpp  opencv.hpp  tomlpp.hpp  voml.hpp  xmake.lua
example/: CMakeLists.txt  example.cpp
include/voml/: details.h
